--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "watchify": "^3.4.0"
   },
   "dependencies": {
+    "angular": "^1.4.8",
+    "angular-cookies": "^1.4.8",
+    "angular-ui-router": "^0.2.15",
     "bootstrap": "^3.3.6",
     "font-awesome": "^4.4.0",
     "jquery": "^2.1.4",
@@ -45,14 +48,16 @@
     "underscore": "^1.8.3"
   },
   "browser": {
-  "jquery": "./node_modules/jquery/dist/jquery.js",
-  "foundation": "./node_modules/foundation-sites/dist/foundation.js"
+    "jquery": "./node_modules/jquery/dist/jquery.js",
+    "foundation": "./node_modules/foundation-sites/dist/foundation.js"
   },
   "browserify-shim": {
     "jquery": "$",
     "foundation": "foundation"
   },
   "browserify": {
-    "transform": ["browserify-shim"]
+    "transform": [
+      "browserify-shim"
+    ]
   }
 }
